[project]
name = "polarlevel"
version = "0.1.0"
description = "Polar access utility"
authors = [
    {name = "Jozsef Varga Liom", email = "31209755+cogitoergoread@users.noreply.github.com"},
]
dependencies = [
    "requests>=2.32",
]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
polarlevel = "polarlevel.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
